vlib/v/parser/tests/map_init_void.vv
fn main() {
	m := map[string]{}
}
